<package>
	<name>tello_interface_process</name>
	<version>1.1.0</version>
	<description>
    		This package is tello_interface_process.
	</description>
	<author email="rodelgo7al@gmail.com"> Alberto Rodelgo Perales</author>
	<maintainer email="rodelgo7al@gmail.com"> Alberto Rodelgo Perales</maintainer>
  <license>BSD-3</license>
	
  <buildtool_depend>catkin</buildtool_depend>

  	<build_depend>roscpp</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>gazebo_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
  	<build_depend>mavros</build_depend> 
	<build_depend>aerostack_msgs</build_depend>
	<build_depend>lib_cvgutils</build_depend>
    <build_depend>tf_conversions</build_depend>
    <build_depend>robot_process</build_depend>
    <build_depend>tello_interface</build_depend>
	<build_depend>mav_msgs</build_depend>

	<run_depend>mav_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>robot_process</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>gazebo_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
  	<run_depend>mavros</run_depend> 
	<run_depend>aerostack_msgs</run_depend>
	<run_depend>lib_cvgutils</run_depend>
    <run_depend>tf_conversions</run_depend>
    <run_depend>tello_interface</run_depend>
</package>


